<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="load_failed">Load Failed.</string>
    <string name="region_language">Region / Language</string>
    <string name="app_version">App Version</string>
    <string name="permission_settings">App Permission</string>
    <string name="article_number">Article Number</string>
    <string name="article_number_note">Please enter a 10-digit article number</string>
    <string name="look_up_article">Look up article</string>
    <string name="look_up_title">Catalogue Lookup</string>

    <!--//have not used yet-->
    <string name="camera">Camera</string>
    <string name="product_barcode">Product Barcode</string>
    <string name="permission_camera_note">Please provide access Camera permission.</string>

    <!--//dont define-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Product</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="downloading">downloading…</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="retry">RETRY</string>
    <string name="notification">Notification</string>
</resources>
