<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="appVersion"
            type="String" />

        <variable
            name="region"
            type="String" />

        <variable
            name="permissionText"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvPermission"
            style="@style/TextSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/permission_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPermissionInfo"
            style="@style/TextSettingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@{permissionText}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPermission"
            tools:text="- Camera - On\n- Notification - Off" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rightArrowPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorGrayLine"
            app:layout_constraintBottom_toBottomOf="@+id/tvPermissionInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPermission"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

        <View
            android:id="@+id/pressPermission"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/linePermission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/linePermission"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrayLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPermissionInfo" />
<!--////-->
        <TextView
            android:id="@+id/tvRegion"
            style="@style/TextSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/region_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linePermission" />

        <TextView
            android:id="@+id/tvRegionInfo"
            style="@style/TextSettingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@{region}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegion"
            tools:text="Indonesia / English" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rightArrowRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorGrayLine"
            app:layout_constraintBottom_toBottomOf="@+id/tvRegionInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRegion"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

        <View
            android:id="@+id/pressRegion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/lineRegion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linePermission" />

        <View
            android:id="@+id/lineRegion"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrayLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegionInfo" />

        <TextView
            android:id="@+id/tvAppVersion"
            style="@style/TextSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineRegion" />

        <TextView
            android:id="@+id/tvAppVersionInfo"
            style="@style/TextSettingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@{appVersion}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppVersion"
            tools:text="0.0.1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rightArrowAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@color/colorGrayLine"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvAppVersionInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAppVersion"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

        <View
            android:id="@+id/lineAppVersion"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrayLine"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppVersionInfo" />


        <!--////For Testing-->

        <TextView
            android:id="@+id/tvLang"
            style="@style/TextSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Search Product" />

        <TextView
            android:id="@+id/tvLangInfo"
            style="@style/TextSettingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLang"
            tools:text="http" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
